强化安卓兼容性与任务串行处理